--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,13 +12,12 @@ import(ggplot2)
 import(purrr)
 import(stringr)
 import(tidyr)
+importFrom(ComplexHeatmap,HeatmapAnnotation)
 importFrom(EnrichedHeatmap,EnrichedHeatmap)
-importFrom(EnrichedHeatmap,HeatmapAnnotation)
 importFrom(EnrichedHeatmap,anno_enriched)
 importFrom(EnrichedHeatmap,as.normalizedMatrix)
 importFrom(EnrichedHeatmap,normalizeToMatrix)
 importFrom(GenomicRanges,strand)
-importFrom(GenomicRanges,subset)
 importFrom(MatrixGenerics,rowMeans2)
 importFrom(RColorBrewer,brewer.pal)
 importFrom(circlize,colorRamp2)
