--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ importFrom(dplyr,group_by)
 importFrom(dplyr,left_join)
 importFrom(dplyr,summarise)
 importFrom(furrr,future_map)
+importFrom(ggh4x,facet_grid2)
 importFrom(ggplot2,facet_grid2)
 importFrom(ggplot2,facet_wrap)
 importFrom(matrixStats,rowSds)
