--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,11 +2,10 @@ Package: seqEasy
 Type: Package
 Title: What the Package Does (Title Case)
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: Shaun Webb
+Maintainer: shaun.webb@ed.ac.uk
+Description: Plots from bw files
+License: Free
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.2
